--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,18 @@ div {
   padding: 40px 200px;
 }
 
+hr {
+  width: 50%;
+}
+
+a {
+  color: #C0B283;
+}
+
+a:hover {
+  color: #F7F7F7;
+}
+
 div h2 {
   padding-bottom: 60px;
 }
@@ -57,7 +69,6 @@ button {
 
 .fa-envelope {
   text-align: center;
-  font-size: 3rem;
 }
 
 #toggle-text {
@@ -79,8 +90,8 @@ button {
   text-transform: uppercase;
 }
 
-.tech-stack {
-  font-size: 6rem;
+.stack-list {
+  display: flex;
 }
 
 .svg-inline--fa {
@@ -88,7 +99,7 @@ button {
 }
 
 .contact {
-  padding-bottom: 170px;
+  padding-bottom: 100px;
   font-size: 1.3rem;
 }
 
@@ -120,7 +131,7 @@ li:before {
 
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 940px) {
 
   div {
     padding: 40px 70px;
